@@ -1,6 +1,10 @@
 ----------------------------------------------------------------
 Released 2.2.1 2006-05-xx
 
+Modules/
+* passwd() accepts None for arguments user, oldpw, newpw
+  (see SF#1440151)
+
 ----------------------------------------------------------------
 Released 2.2.0 2006-04-10
 
